assembler implementations
B Fixed segfault in FXFSMonitor on process exit due to unremoved paths
B Moved FXException data into private structure to work around MSVC stack
over-allocation bug
B QSSLDevice wasn't 64 bit compatible and threw random errors :(
B FXFSMonitor was hanging on process exit on POSIX due to FAM/gamin
B FXNetwork::dnsReverseLookup was failing on Apple MacOS X

* Removed many unnecessary fetches of per-thread data (slow on POSIX) in
FXException
* Made FXProcess::mappedFiles() cached
* Fixed up memory locking code to lock per VirtualAlloc region
* Disabled signals to threads (without it, gprof won't run)
* Merged FOX v1.6.4
+ Added kqueue implementation to FXFSMonitor
+ Ported TnFOX to Apple MacOS X (Intel only)
* Merged FOX v1.6.6
* Substantially improved python bindings
+ Made FXAtomicInt, and therefore TnFOX, portable to all GCC supported
architectures
+ Added modular building of TnFOX
* Renamed FXSQLDB* to TnFXSQLDB*
+ Updated build system so it will compile on generic architectures
* Merged FOX v1.6.9
+ Added Pol::destructiveCopyNoDelete and Pol::noCopyNoDelete
+ Added support and use of restrict keyword
* Fixed up linking tests against a static TnFOX library
+ Added FXGLColor and replaced use of FXVec4f where appropriate
+ Added FXGLVertices
+ Added Generic::SmallestValue. Fixed up Generic::BiggestValue for MSVC
+ Added Secure::FRandomness
+ Added Maths namespace and moved Secure::FRandomness into it. Added
functions and classes Array, Array2, normalrand, normaldist, mean,
variance, stddev, distribution to Maths namespace
+ Added 64 bit overloads for fxbitscan() and fxbitscanrev()
+ Added Maths::InfinityValue and Maths::NaNValue
* Merged FOX v1.6.18
* Merged FOX v1.6.25
* Fixed problem with newer scons (> v0.96.95) which prevented correct
detection of build environment
* Updated doxygen config to v1.5.2
+ Added incorporation of current SVN revision into source
* Added FXProcess::buildInfo() and broke out hostOS() and
hostOSDescription()