@@ -20,6 +20,7 @@ over-allocation bug
 B QSSLDevice wasn't 64 bit compatible and threw random errors :(
 B FXFSMonitor was hanging on process exit on POSIX due to FAM/gamin
 B FXNetwork::dnsReverseLookup was failing on Apple MacOS X
+B Thread cancellation wasn't invoking cleanup handlers on Linux
 
 * Removed many unnecessary fetches of per-thread data (slow on POSIX) in
 FXException
